styles/inputStyle.css
/* author: Peter Chen*/
.buffer {
    height: 80px;
    color: green;
}

#hours-container {
    position: absolute;
    top: 200px;
    left: 180px;
}

input[name] {
    border: 1px solid rgb(209, 205, 205);
    display: block;
    outline: none;
}

input:hover {
    box-shadow: 0 0 3px 2px #dbd9d9;
}

input#hours {
    width: 70%;
    max-width: 200px;
}

input#work-area {
    width: 90%;
    max-width: 300px;
}

.database {
    color: red;
}

h2.submissions {
    margin-top: 7%;
}

table {
    min-width: 400px;
    margin-bottom: 5%;
}

table, th, td {
    border: 1px solid black;
    padding: 5px;
}

/*--- adjust to make the page look better on small screens ---*/
@media only screen and (max-width: 768px) {
    .col-md-3 {
        margin-top: 5%;
        margin-bottom: 5%;
    }

    input#work-area {
        max-width: 70%; 
    }
}


@media only screen and (min-width: 768px) {
    #submit {
        position: relative;
        left: 50%;
        top: 25%;
    }
}

